--- a/MultivariateZscoreCovariance.ipynb
+++ b/MultivariateZscoreCovariance.ipynb
@@ -183,7 +183,7 @@
    "metadata": {},
    "source": [
     "# Covariance of $z$-score vectors\n",
-    "From the $z-$score vectors, we can estimate the covariance matrix. Plotting this shows a remarkable similarity with the genotype correlations."
+    "From the $z-$score vectors, we can estimate the covariance matrix. Plotting this shows a remarkable similarity to the genotype correlations."
    ]
   },
   {
@@ -273,28 +273,6 @@
    "metadata": {},
    "source": [
     "Playing around with different prevalences does not seem to change the results."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.36787944117144233"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "e^-1"
    ]
   },
   {
