--- a/MultivariateZscoreCovariance.ipynb
+++ b/MultivariateZscoreCovariance.ipynb
@@ -31,10 +31,37 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO: Recompiling stale cache file /Users/jonalm/.julia/lib/v0.4/ProgressMeter.ji for module ProgressMeter.\n",
+      "INFO: Recompiling stale cache file /Users/jonalm/.julia/lib/v0.4/Roots.ji for module Roots.\n",
+      "INFO: Recompiling stale cache file /Users/jonalm/.julia/lib/v0.4/Polynomials.ji for module Polynomials.\n",
+      "INFO: Recompiling stale cache file /Users/jonalm/.julia/lib/v0.4/ForwardDiff.ji for module ForwardDiff.\n",
+      "INFO: Recompiling stale cache file /Users/jonalm/.julia/lib/v0.4/Calculus.ji for module Calculus.\n",
+      "INFO: Recompiling stale cache file /Users/jonalm/.julia/lib/v0.4/NaNMath.ji for module NaNMath.\n",
+      "INFO: Recompiling stale cache file /Users/jonalm/.julia/lib/v0.4/Distributions.ji for module Distributions.\n",
+      "INFO: Recompiling stale cache file /Users/jonalm/.julia/lib/v0.4/PDMats.ji for module PDMats.\n",
+      "INFO: Recompiling stale cache file /Users/jonalm/.julia/lib/v0.4/StatsFuns.ji for module StatsFuns.\n",
+      "INFO: Recompiling stale cache file /Users/jonalm/.julia/lib/v0.4/StatsBase.ji for module StatsBase.\n",
+      "INFO: Recompiling stale cache file /Users/jonalm/.julia/lib/v0.4/ArrayViews.ji for module ArrayViews.\n",
+      "INFO: Recompiling stale cache file /Users/jonalm/.julia/lib/v0.4/PyPlot.ji for module PyPlot.\n",
+      "INFO: Recompiling stale cache file /Users/jonalm/.julia/lib/v0.4/PyCall.ji for module PyCall.\n",
+      "INFO: Recompiling stale cache file /Users/jonalm/.julia/lib/v0.4/Conda.ji for module Conda.\n",
+      "INFO: Recompiling stale cache file /Users/jonalm/.julia/lib/v0.4/MacroTools.ji for module MacroTools.\n",
+      "INFO: Recompiling stale cache file /Users/jonalm/.julia/lib/v0.4/Colors.ji for module Colors.\n",
+      "INFO: Recompiling stale cache file /Users/jonalm/.julia/lib/v0.4/FixedPointNumbers.ji for module FixedPointNumbers.\n",
+      "INFO: Recompiling stale cache file /Users/jonalm/.julia/lib/v0.4/ColorTypes.ji for module ColorTypes.\n",
+      "INFO: Recompiling stale cache file /Users/jonalm/.julia/lib/v0.4/Reexport.ji for module Reexport.\n",
+      "INFO: Recompiling stale cache file /Users/jonalm/.julia/lib/v0.4/LaTeXStrings.ji for module LaTeXStrings.\n"
+     ]
+    }
+   ],
    "source": [
     "import Base\n",
-    "using FakeGeno # load functions for generating sample"
+    "using GWASTools # load functions for generating sample"
    ]
   },
   {
@@ -295,7 +322,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.4.2"
+   "version": "0.4.7"
   }
  },
  "nbformat": 4,
